--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@
                 <li>WordPress</li>
                 <li>MySQL</li>
                 <li>OOP</li>
+                <li>Gemini</li>
+                <li>ChatGPT</li>
             </ul>
         </div>
     </section>
