--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <section id="left">
                 <div class="hello"><p>สวัสดีครับผมชื่อ</p> </div>
                 <div class="name"><h1>นายสัณหณัฐ ไฉยากุล</h1></div>
-                <div class="description"><h2>ผมกำลังมองหางานตำแหน่งโปรแกรมเมอร์ </h2></div>
+                <div class="description"><h2>ผมกำลังมองหาโอกาสที่จะได้ฝึกฝนและพัฒนาตัวเองในสายงานโปรแกรมเมอร์ครับ ผมมีความมุ่งมั่นที่จะเรียนรู้และพร้อมที่จะทุ่มเทให้กับการทำงานครับ </h2></div>
                 <div class="skill">                
                     <i class="fa-brands fa-html5" style="color: #f06529; font-size:2rem; padding-right: 1rem; ;"></i>
                     <i class="fa-brands fa-css3-alt" style="color: #2965f1; font-size:2rem; padding-right: 1rem; ;"></i>
